Updated index and stylized

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="header">
-        <img src="images/logo.png" id="mainLogo" width="" height="">
+        <a href="#"><img src="images/logo.png" id="mainLogo" width="" height=""></a>
 
         <ul>
             <li><a href="#">Info</a></li>
@@ -21,13 +21,54 @@
     </div>
 
     <div class="hero">
-        <div class="heroText">
-            <h1>Coolest breakbeat page ever!</h1>
-            <p>Breakbeat is a techno subgenre, this is the best page you will ever find about breakbeat! Feel free to join the forums.</p>
-            <button class="button heroButton">Sign up</button>
+        <div class="hItem">
+            <div class="heroText">
+                <h1>Coolest breakbeat page ever!</h1>
+                <p>Breakbeat is a techno subgenre, this is the best page you will ever find about breakbeat! Feel free
+                    to join the forums.</p>
+                <button class="button heroButton">Sign up</button>
+            </div>
         </div>
-        <div class="heroImg">
-            <img src="images/dobberman.jpg" alt="Dobberman">
+        <div class="hItem">
+            <div class="hItem heroImg">
+                <img src="images/dobberman.jpg" alt="Dobberman">
+            </div>
+        </div>
+    </div>
+
+    <div class="info">
+        <h1>Type of Breakz.</h1>
+        <div class="infoBoxes">
+            <div class="infoBox">
+                <img src="images/dobberman.jpg" alt="Dobberman">
+                <p>d1</p>
+            </div>
+            <div class="infoBox">
+                <img src="images/dobberman.jpg" alt="Dobberman">
+                <p>d1</p>
+            </div>
+            <div class="infoBox">
+                <img src="images/dobberman.jpg" alt="Dobberman">
+                <p>d1</p>
+            </div>
+            <div class="infoBox">
+                <img src="images/dobberman.jpg" alt="Dobberman">
+                <p>d1</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <div class="quoteText">
+            <p>
+                Now, we do not pretend to have achieved perfection, but we do have a system, and it works.
+                Your choice is simple: Join us and live in peace, or pursue your present course and face obliteration.
+            </p>
+        </div>
+        <div class="quoteAuthor">
+            <h4>
+                Klaatu, humanoid alien
+            </h4>
         </div>
     </div>
 
