--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="js/app.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -18,6 +19,9 @@
             <a href="#"><img src="images/logo.png" id="mainLogo" width="" height=""></a>
 
             <ul class="links">
+                <li><button onclick="toggleTheme()" id="themeButton"><span class="material-symbols-outlined">
+                    dark_mode
+                    </span></button></li>
                 <li><a href="#workSection">Work</a></li>
                 <li><a href="#quoteSection">About</a></li>
                 <li><a href="#contactSection">Contact</a></li>
@@ -40,7 +44,7 @@
                 </div>
                 <div class="hItem">
                     <div class="hItem heroImg">
-                        <img src="images/dobberman.jpg" alt="Dobberman">
+                        <img src="images/dobberman.png" alt="Dobberman">
                     </div>
                 </div>
             </div>
@@ -53,19 +57,19 @@
                     <p>Shutterspeed</p>
                 </div>
                 <div class="infoBox">
-                    <img src="images/dobberman.jpg" alt="Dobberman">
+                    <img src="images/dobberman.png" alt="Dobberman">
                     <p>Nu Skool</p>
                 </div>
                 <div class="infoBox">
-                    <img src="images/dobberman.jpg" alt="Dobberman">
+                    <img src="images/dobberman.png" alt="Dobberman">
                     <p>d1</p>
                 </div>
                 <div class="infoBox">
-                    <img src="images/dobberman.jpg" alt="Dobberman">
+                    <img src="images/dobberman.png" alt="Dobberman">
                     <p>d1</p>
                 </div>
                 <div class="infoBox">
-                    <img src="images/dobberman.jpg" alt="Dobberman">
+                    <img src="images/dobberman.png" alt="Dobberman">
                     <p>d1</p>
                 </div>
             </div>
